src/parser.output
Terminals unused in grammar

    ELLIPSIS


State 60 conflicts: 2 shift/reduce
State 99 conflicts: 1 shift/reduce
State 279 conflicts: 1 shift/reduce
State 285 conflicts: 1 shift/reduce
State 378 conflicts: 3 shift/reduce
State 390 conflicts: 1 shift/reduce


Grammar

    0 $accept: file $end

    1 file: ε
    2     | statements
    3     | statements expr
    4     | expr

    5 statements: statement
    6           | statements statement

    7 statement: iterstatement
    8          | commonstatement
    9          | IDENTIFIER ':' commonstatement

   10 localvar: LOCAL
   11         | LOCALLET
   12         | LOCALCONST

   13 objexport: object
   14          | IDENTIFIER
   15          | '*'
   16          | '+'

   17 commonstatement: expr ';'
   18                | if_statement
   19                | delete_statement
   20                | BREAK identifier_opt ';'
   21                | CONTINUE identifier_opt ';'
   22                | RETURN expr ';'
   23                | RETURN ';'
   24                | localvar vardecs ';'
   25                | THROW expr ';'
   26                | try_statement
   27                | with_statement
   28                | ';'
   29                | '{' statements '}'
   30                | func_statement
   31                | EXPORT DEFAULT objexport

   32 func_statement: func_prefix '(' args_opt ')' ':' rettype func_statement_block
   33               | func_prefix '(' args_opt ')' func_statement_block

   34 func_prefix: FUNC IDENTIFIER

   35 iterstatement: for_statement
   36              | while_statement
   37              | do_statement
   38              | switch_statement

   39 identifier_opt: ε
   40               | IDENTIFIER

   41 label_opt: ε
   42          | IDENTIFIER ':'

   43 statement_or_empty: statement
   44                   | '{' '}'

   45 with_statement: WITH '(' expr ')' statement_or_empty

   46 switch_statement: label_opt SWITCH '(' expr ')' '{' '}'
   47                 | label_opt SWITCH '(' expr ')' '{' cases '}'

   48 cases: case
   49      | cases case

   50 case: CASE expr ':' statements
   51     | DEFAULT ':' statements
   52     | DEFAULT ':'
   53     | CASE expr ':'

   54 try_statement: TRY func_statement_block CATCH '(' IDENTIFIER ')' func_statement_block
   55              | TRY func_statement_block FINALLY func_statement_block
   56              | TRY func_statement_block CATCH '(' IDENTIFIER ')' func_statement_block FINALLY func_statement_block

   57 vardecs: vardec
   58        | vardecs ',' vardec

   59 vardec: IDENTIFIER
   60       | IDENTIFIER '=' expr

   61 delete_statement: DELETE lvalue ';'

   62 if_statement: IF '(' expr ')' statement_or_empty
   63             | IF '(' expr ')' statement_or_empty ELSE statement_or_empty

   64 inof: IN
   65     | OF

   66 for_statement: label_opt FOR '(' for_init for_cond ';' expr_opt ')' statement_or_empty
   67              | label_opt FOR '(' localvar IDENTIFIER inof expr ')' statement_or_empty
   68              | label_opt FOR '(' lvalue inof expr ')' statement_or_empty

   69 for_init: ';'
   70         | expr ';'
   71         | localvar vardecs ';'

   72 for_cond: ε
   73         | expr

   74 expr_opt: ε
   75         | expr

   76 while_statement: label_opt WHILE '(' expr ')' statement_or_empty

   77 do_statement: label_opt DO statement_or_empty WHILE '(' expr ')'

   78 func_expr: FUNC '(' args_opt ')' func_statement_block
   79          | FUNC '(' args_opt ')' ':' rettype func_statement_block
   80          | FUNC IDENTIFIER '(' args_opt ')' func_statement_block
   81          | FUNC IDENTIFIER '(' args_opt ')' ':' rettype func_statement_block

   82 args_opt: ε
   83         | args
   84         | '.' '.' '.'
   85         | args ',' '.' '.' '.'

   86 typeid: TYPESTRING
   87       | TYPENUMBER
   88       | TYPEBOOLEAN
   89       | TYPEREGEXP
   90       | TYPEOBJECT
   91       | TYPEUSEROBJ
   92       | TYPEITEROBJ
   93       | TYPEANY
   94       | TYPEARRAY
   95       | TYPENULL
   96       | FUNC
   97       | UNDEF
   98       | VOID

   99 rettype: argtype

  100 argtype: typeid
  101        | argtype '|' typeid

  102 strlit: STRING

  103 argdefault: UNDEF
  104           | VOID
  105           | '-' FNUMBER
  106           | FNUMBER
  107           | _TRUE
  108           | _FALSE
  109           | TYPENULL
  110           | strlit

  111 args: IDENTIFIER
  112     | IDENTIFIER '=' argdefault
  113     | IDENTIFIER ':' argtype
  114     | IDENTIFIER ':' argtype '=' argdefault
  115     | args ',' IDENTIFIER
  116     | args ',' IDENTIFIER '=' argdefault
  117     | args ',' IDENTIFIER ':' argtype
  118     | args ',' IDENTIFIER ':' argtype '=' argdefault

  119 argsa: IDENTIFIER
  120      | argsa ',' IDENTIFIER

  121 arrowargs: IDENTIFIER
  122          | '(' IDENTIFIER ',' argsa ')'
  123          | '(' ')'

  124 func_statement_block: '{' statements '}'
  125                     | '{' '}'

  126 expr: value
  127     | func_expr
  128     | lvalue
  129     | expr ',' expr
  130     | expr '[' expr ']'
  131     | expr '.' IDENTIFIER
  132     | '-' expr
  133     | '+' expr
  134     | '~' expr
  135     | '!' expr
  136     | VOID expr
  137     | expr '*' expr
  138     | expr '/' expr
  139     | expr '%' expr
  140     | expr '+' expr
  141     | expr '-' expr
  142     | expr IN expr
  143     | lvalue INC
  144     | lvalue DEC
  145     | INC lvalue
  146     | TYPEOF expr
  147     | DEC lvalue
  148     | '(' expr ')'
  149     | arrowargs ARROW expr
  150     | arrowargs ARROW func_statement_block
  151     | expr AND expr
  152     | expr OR expr
  153     | expr '<' expr
  154     | expr '>' expr
  155     | expr LEQ expr
  156     | expr GEQ expr
  157     | expr EQU expr
  158     | expr NEQ expr
  159     | expr EEQU expr
  160     | expr NNEQ expr
  161     | expr '&' expr
  162     | expr '|' expr
  163     | expr '^' expr
  164     | expr LSHF expr
  165     | expr RSHF expr
  166     | expr URSHF expr
  167     | lvalue '=' expr
  168     | lvalue ADDAS expr
  169     | lvalue MNSAS expr
  170     | lvalue MULAS expr
  171     | lvalue MODAS expr
  172     | lvalue LSHFAS expr
  173     | lvalue RSHFAS expr
  174     | lvalue URSHFAS expr
  175     | lvalue BANDAS expr
  176     | lvalue BORAS expr
  177     | lvalue BXORAS expr
  178     | lvalue DIVAS expr
  179     | lvalue INSTANCEOF expr
  180     | fcall_exprs
  181     | NEW value
  182     | NEW lvalue
  183     | NEW '(' expr ')'
  184     | NEW func_expr
  185     | NEW value '(' exprlist_opt ')'
  186     | NEW lvalue '(' exprlist_opt ')'
  187     | NEW '(' expr ')' '(' exprlist_opt ')'
  188     | NEW func_expr '(' exprlist_opt ')'
  189     | func_expr '(' exprlist_opt ')'
  190     | expr '?' expr ':' expr
  191     | __DEBUG

  192 fcall_exprs: expr '.' IDENTIFIER '(' exprlist_opt ')'
  193            | expr '[' expr ']' '(' exprlist_opt ')'
  194            | fcall_exprs '(' exprlist_opt ')'
  195            | '(' expr ')' '(' exprlist_opt ')'
  196            | lvalue '(' exprlist_opt ')'

  197 lvalue: IDENTIFIER
  198       | ARGUMENTS
  199       | _THIS
  200       | lvalue '[' expr ']'
  201       | lvalue '.' IDENTIFIER
  202       | lvalue '.' itemres

  203 exprlist_opt: ε
  204             | exprlist

  205 exprlist: expr
  206         | exprlist ',' expr
  207         | exprlist ',' ','
  208         | ',' exprlist

  209 value: strlit
  210      | TYPENULL
  211      | UNDEF
  212      | _TRUE
  213      | _FALSE
  214      | FNUMBER
  215      | REGEXP
  216      | object
  217      | array

  218 object: '{' items '}'

  219 itemfunc: IDENTIFIER '(' args_opt ')' func_statement_block

  220 itemident: itemfunc
  221          | IDENTIFIER
  222          | item

  223 items: ε
  224      | item
  225      | items ',' itemident
  226      | items ','

  227 itemres: OBJSET
  228        | OBJGET
  229        | CONTINUE
  230        | RETURN
  231        | BREAK
  232        | THROW
  233        | DEFAULT
  234        | CASE
  235        | EXPORT
  236        | TYPEANY
  237        | TYPEARRAY
  238        | TYPESTRING
  239        | TYPENUMBER
  240        | TYPEBOOLEAN
  241        | TYPEREGEXP
  242        | TYPEITEROBJ
  243        | TYPEUSEROBJ
  244        | ARGUMENTS
  245        | _THIS
  246        | DELETE
  247        | NEW
  248        | LOCAL
  249        | LOCALLET
  250        | LOCALCONST
  251        | VOID
  252        | __DEBUG
  253        | TYPEOBJECT
  254        | WITH
  255        | FUNC
  256        | TYPEOF
  257        | INSTANCEOF

  258 item: IDENTIFIER ':' expr
  259     | strlit ':' expr
  260     | itemres ':' expr
  261     | FNUMBER ':' expr
  262     | _TRUE ':' expr
  263     | _FALSE ':' expr
  264     | UNDEF ':' expr
  265     | TYPENULL ':' expr
  266     | OBJSET IDENTIFIER '(' IDENTIFIER ')' func_statement_block
  267     | OBJGET IDENTIFIER '(' ')' func_statement_block

  268 array: '[' exprlist ']'
  269      | '[' exprlist ',' ']'
  270      | '[' ']'


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 135
    '%' (37) 139
    '&' (38) 161
    '(' (40) 32 33 45 46 47 54 56 62 63 66 67 68 76 77 78 79 80 81 122 123 148 183 185 186 187 188 189 192 193 194 195 196 219 266 267
    ')' (41) 32 33 45 46 47 54 56 62 63 66 67 68 76 77 78 79 80 81 122 123 148 183 185 186 187 188 189 192 193 194 195 196 219 266 267
    '*' (42) 15 137
    '+' (43) 16 133 140
    ',' (44) 58 85 115 116 117 118 120 122 129 206 207 208 225 226 269
    '-' (45) 105 132 141
    '.' (46) 84 85 131 192 201 202
    '/' (47) 138
    ':' (58) 9 32 42 50 51 52 53 79 81 113 114 117 118 190 258 259 260 261 262 263 264 265
    ';' (59) 17 20 21 22 23 24 25 28 61 66 69 70 71
    '<' (60) 153
    '=' (61) 60 112 114 116 118 167
    '>' (62) 154
    '?' (63) 190
    '[' (91) 130 193 200 268 269 270
    ']' (93) 130 193 200 268 269 270
    '^' (94) 163
    '{' (123) 29 44 46 47 124 125 218
    '|' (124) 101 162
    '}' (125) 29 44 46 47 124 125 218
    '~' (126) 134
    error (256)
    IDENTIFIER <sstr> (258) 9 14 34 40 42 54 56 59 60 67 80 81 111 112 113 114 115 116 117 118 119 120 121 122 131 192 197 201 219 221 258 266 267
    STRING <vstr> (259) 102
    IF (260) 62 63
    ELSE (261) 63
    FOR (262) 66 67 68
    IN (263) 64 142
    WHILE (264) 76 77
    DO (265) 77
    CONTINUE (266) 21 229
    SWITCH (267) 46 47
    CASE (268) 50 53 234
    DEFAULT (269) 31 51 52 233
    BREAK (270) 20 231
    FUNC (271) 34 78 79 80 81 96 255
    RETURN (272) 22 23 230
    LOCAL (273) 10 248
    LOCALCONST (274) 12 250
    LOCALLET (275) 11 249
    OF (276) 65
    NEW (277) 181 182 183 184 185 186 187 188 247
    DELETE (278) 61 246
    TRY (279) 54 55 56
    CATCH (280) 54 56
    FINALLY (281) 55 56
    THROW (282) 25 232
    WITH (283) 45 254
    UNDEF (284) 97 103 211 264
    _TRUE (285) 107 212 262
    _FALSE (286) 108 213 263
    _THIS (287) 199 245
    ARGUMENTS (288) 198 244
    FNUMBER <num> (289) 105 106 214 261
    REGEXP <regex> (290) 215
    TYPESTRING (291) 86 238
    TYPENUMBER (292) 87 239
    TYPENULL (293) 95 109 210 265
    TYPEOBJECT (294) 90 253
    TYPEBOOLEAN (295) 88 240
    TYPEUSEROBJ (296) 91 243
    TYPEITEROBJ (297) 92 242
    TYPEREGEXP (298) 89 241
    TYPEANY (299) 93 236
    TYPEARRAY (300) 94 237
    ELLIPSIS (301)
    EXPORT (302) 31 235
    OBJSET (303) 227 266
    OBJGET (304) 228 267
    ARROW (305) 149 150
    __DEBUG (306) 191 252
    MIN_PRI (307)
    ARGCOMMA (308)
    ADDAS (309) 168
    MNSAS (310) 169
    MULAS (311) 170
    MODAS (312) 171
    LSHFAS (313) 172
    RSHFAS (314) 173
    URSHFAS (315) 174
    BANDAS (316) 175
    BORAS (317) 176
    BXORAS (318) 177
    DIVAS (319) 178
    OR (320) 152
    AND (321) 151
    EQU (322) 157
    NEQ (323) 158
    EEQU (324) 159
    NNEQ (325) 160
    LEQ (326) 155
    GEQ (327) 156
    INSTANCEOF (328) 179 257
    LSHF (329) 164
    RSHF (330) 165
    URSHF (331) 166
    NEG (332)
    INC (333) 143 145
    DEC (334) 144 147
    TYPEOF (335) 146 256
    VOID (336) 98 104 136 251
    MAX_PRI (337)


Nonterminals, with rules where they appear

    $accept (107)
        on left: 0
    file (108)
        on left: 1 2 3 4
        on right: 0
    statements <opcodes> (109)
        on left: 5 6
        on right: 2 3 6 29 50 51 124
    statement <opcodes> (110)
        on left: 7 8 9
        on right: 5 6 43
    localvar <inum> (111)
        on left: 10 11 12
        on right: 24 67 71
    objexport <opcodes> (112)
        on left: 13 14 15 16
        on right: 31
    commonstatement <opcodes> (113)
        on left: 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31
        on right: 8 9
    func_statement <opcodes> (114)
        on left: 32 33
        on right: 30
    func_prefix <sstr> (115)
        on left: 34
        on right: 32 33
    iterstatement <opcodes> (116)
        on left: 35 36 37 38
        on right: 7
    identifier_opt <sstr> (117)
        on left: 39 40
        on right: 20 21
    label_opt <sstr> (118)
        on left: 41 42
        on right: 46 47 66 67 68 76 77
    statement_or_empty <opcodes> (119)
        on left: 43 44
        on right: 45 62 63 66 67 68 76 77
    with_statement <opcodes> (120)
        on left: 45
        on right: 27
    switch_statement <opcodes> (121)
        on left: 46 47
        on right: 38
    cases <caselist> (122)
        on left: 48 49
        on right: 47 49
    case <caseitem> (123)
        on left: 50 51 52 53
        on right: 48 49
    try_statement <opcodes> (124)
        on left: 54 55 56
        on right: 26
    vardecs <opcodes> (125)
        on left: 57 58
        on right: 24 58 71
    vardec <opcodes> (126)
        on left: 59 60
        on right: 57 58
    delete_statement <opcodes> (127)
        on left: 61
        on right: 19
    if_statement <opcodes> (128)
        on left: 62 63
        on right: 18
    inof <inum> (129)
        on left: 64 65
        on right: 67 68
    for_statement <opcodes> (130)
        on left: 66 67 68
        on right: 35
    for_init <opcodes> (131)
        on left: 69 70 71
        on right: 66
    for_cond <opcodes> (132)
        on left: 72 73
        on right: 66
    expr_opt <opcodes> (133)
        on left: 74 75
        on right: 66
    while_statement <opcodes> (134)
        on left: 76
        on right: 36
    do_statement <opcodes> (135)
        on left: 77
        on right: 37
    func_expr <opcodes> (136)
        on left: 78 79 80 81
        on right: 127 184 188 189
    args_opt <scopes> (137)
        on left: 82 83 84 85
        on right: 32 33 78 79 80 81 219
    typeid <inum> (138)
        on left: 86 87 88 89 90 91 92 93 94 95 96 97 98
        on right: 100 101
    rettype <inum> (139)
        on left: 99
        on right: 32 79 81
    argtype <inum> (140)
        on left: 100 101
        on right: 99 101 113 114 117 118
    strlit <vstr> (141)
        on left: 102
        on right: 110 209 259
    argdefault <value> (142)
        on left: 103 104 105 106 107 108 109 110
        on right: 112 114 116 118
    args <scopes> (143)
        on left: 111 112 113 114 115 116 117 118
        on right: 83 85 115 116 117 118
    argsa <scopes> (144)
        on left: 119 120
        on right: 120 122
    arrowargs <scopes> (145)
        on left: 121 122 123
        on right: 149 150
    func_statement_block <opcodes> (146)
        on left: 124 125
        on right: 32 33 54 55 56 78 79 80 81 150 219 266 267
    expr <opcodes> (147)
        on left: 126 127 128 129 130 131 132 133 134 135 136 137 138 139 140 141 142 143 144 145 146 147 148 149 150 151 152 153 154 155 156 157 158 159 160 161 162 163 164 165 166 167 168 169 170 171 172 173 174 175 176 177 178 179 180 181 182 183 184 185 186 187 188 189 190 191
        on right: 3 4 17 22 25 45 46 47 50 53 60 62 63 67 68 70 73 75 76 77 129 130 131 132 133 134 135 136 137 138 139 140 141 142 146 148 149 151 152 153 154 155 156 157 158 159 160 161 162 163 164 165 166 167 168 169 170 171 172 173 174 175 176 177 178 179 183 187 190 192 193 195 200 205 206 258 259 260 261 262 263 264 265
    fcall_exprs <opcodes> (148)
        on left: 192 193 194 195 196
        on right: 180 194
    lvalue <opcodes> (149)
        on left: 197 198 199 200 201 202
        on right: 61 68 128 143 144 145 147 167 168 169 170 171 172 173 174 175 176 177 178 179 182 186 196 200 201 202
    exprlist_opt <opcodes> (150)
        on left: 203 204
        on right: 185 186 187 188 189 192 193 194 195 196
    exprlist <opcodes> (151)
        on left: 205 206 207 208
        on right: 204 206 207 208 268 269
    value <opcodes> (152)
        on left: 209 210 211 212 213 214 215 216 217
        on right: 126 181 185
    object <opcodes> (153)
        on left: 218
        on right: 13 216
    itemfunc <opcodes> (154)
        on left: 219
        on right: 220
    itemident <opcodes> (155)
        on left: 220 221 222
        on right: 225
    items <opcodes> (156)
        on left: 223 224 225 226
        on right: 218 225 226
    itemres <opcodes> (157)
        on left: 227 228 229 230 231 232 233 234 235 236 237 238 239 240 241 242 243 244 245 246 247 248 249 250 251 252 253 254 255 256 257
        on right: 202 260
    item <opcodes> (158)
        on left: 258 259 260 261 262 263 264 265 266 267
        on right: 222 224
    array <opcodes> (159)
        on left: 268 269 270
        on right: 217


State 0

    0 $accept: • file $end

    IDENTIFIER  shift, and go to state 1
    STRING      shift, and go to state 2
    IF          shift, and go to state 3
    CONTINUE    shift, and go to state 4
    BREAK       shift, and go to state 5
    FUNC        shift, and go to state 6
    RETURN      shift, and go to state 7
    LOCAL       shift, and go to state 8
    LOCALCONST  shift, and go to state 9
    LOCALLET    shift, and go to state 10
    NEW         shift, and go to state 11
    DELETE      shift, and go to state 12
    TRY         shift, and go to state 13
    THROW       shift, and go to state 14
    WITH        shift, and go to state 15
    UNDEF       shift, and go to state 16
    _TRUE       shift, and go to state 17
    _FALSE      shift, and go to state 18
    _THIS       shift, and go to state 19
    ARGUMENTS   shift, and go to state 20
    FNUMBER     shift, and go to state 21
    REGEXP      shift, and go to state 22
    TYPENULL    shift, and go to state 23
    EXPORT      shift, and go to state 24
    __DEBUG     shift, and go to state 25
    '+'         shift, and go to state 26
    '-'         shift, and go to state 27
    '!'         shift, and go to state 28
    INC         shift, and go to state 29
    DEC         shift, and go to state 30
    '~'         shift, and go to state 31
    TYPEOF      shift, and go to state 32
    VOID        shift, and go to state 33
    '['         shift, and go to state 34
    '('         shift, and go to state 35
    ';'         shift, and go to state 36
    '{'         shift, and go to state 37

    $end      reduce using rule 1 (file)
    $default  reduce using rule 41 (label_opt)

    file              go to state 38
    statements        go to state 39
    statement         go to state 40
    localvar          go to state 41
    commonstatement   go to state 42
    func_statement    go to state 43
    func_prefix       go to state 44
    iterstatement     go to state 45
    label_opt         go to state 46
    with_statement    go to state 47
    switch_statement  go to state 48
    try_statement     go to state 49
    delete_statement  go to state 50
    if_statement      go to state 51
    for_statement     go to state 52
    while_statement   go to state 53
    do_statement      go to state 54
    func_expr         go to state 55
    strlit            go to state 56
    arrowargs         go to state 57
    expr              go to state 58
    fcall_exprs       go to state 59
    lvalue            go to state 60
    value             go to state 61
    object            go to state 62
    array             go to state 63


State 1

    9 statement: IDENTIFIER • ':' commonstatement
   42 label_opt: IDENTIFIER • ':'
  121 arrowargs: IDENTIFIER •
  197 lvalue: IDENTIFIER •

    ':'  shift, and go to state 64

    ARROW     reduce using rule 121 (arrowargs)
    $default  reduce using rule 197 (lvalue)


State 2

  102 strlit: STRING •

    $default  reduce using rule 102 (strlit)


State 3

   62 if_statement: IF • '(' expr ')' statement_or_empty
   63             | IF • '(' expr ')' statement_or_empty ELSE statement_or_empty

    '('  shift, and go to state 65


State 4

   21 commonstatement: CONTINUE • identifier_opt ';'

    IDENTIFIER  shift, and go to state 66

    $default  reduce using rule 39 (identifier_opt)

    identifier_opt  go to state 67


State 5

   20 commonstatement: BREAK • identifier_opt ';'

    IDENTIFIER  shift, and go to state 66

    $default  reduce using rule 39 (identifier_opt)

    identifier_opt  go to state 68


State 6

   34 func_prefix: FUNC • IDENTIFIER
   78 func_expr: FUNC • '(' args_opt ')' func_statement_block
   79          | FUNC • '(' args_opt ')' ':' rettype func_statement_block
   80          | FUNC • IDENTIFIER '(' args_opt ')' func_statement_block
   81          | FUNC • IDENTIFIER '(' args_opt ')' ':' rettype func_statement_block

    IDENTIFIER  shift, and go to state 69
    '('         shift, and go to state 70


State 7

   22 commonstatement: RETURN • expr ';'
   23                | RETURN • ';'

    IDENTIFIER  shift, and go to state 71
    STRING      shift, and go to state 2
    FUNC        shift, and go to state 72
    NEW         shift, and go to state 11
    UNDEF       shift, and go to state 16
    _TRUE       shift, and go to state 17
    _FALSE      shift, and go to state 18
    _THIS       shift, and go to state 19
    ARGUMENTS   shift, and go to state 20
    FNUMBER     shift, and go to state 21
    REGEXP      shift, and go to state 22
    TYPENULL    shift, and go to state 23
    __DEBUG     shift, and go to state 25
    '+'         shift, and go to state 26
    '-'         shift, and go to state 27
    '!'         shift, and go to state 28
    INC         shift, and go to state 29
    DEC         shift, and go to state 30
    '~'         shift, and go to state 31
    TYPEOF      shift, and go to state 32
    VOID        shift, and go to state 33
    '['         shift, and go to state 34
    '('         shift, and go to state 35
    ';'         shift, and go to state 73
    '{'         shift, and go to state 74

    func_expr    go to state 55
    strlit       go to state 56
    arrowargs    go to state 57
    expr         go to state 75
    fcall_exprs  go to state 59
    lvalue       go to state 60
    value        go to state 61
    object       go to state 62
    array        go to state 63


State 8

   10 localvar: LOCAL •

    $default  reduce using rule 10 (localvar)


State 9

   12 localvar: LOCALCONST •

    $default  reduce using rule 12 (localvar)


State 10

   11 localvar: LOCALLET •

    $default  reduce using rule 11 (localvar)


State 11

  181 expr: NEW • value
  182     | NEW • lvalue
  183     | NEW • '(' expr ')'
  184     | NEW • func_expr
  185     | NEW • value '(' exprlist_opt ')'
  186     | NEW • lvalue '(' exprlist_opt ')'
  187     | NEW • '(' expr ')' '(' exprlist_opt ')'
  188     | NEW • func_expr '(' exprlist_opt ')'

    IDENTIFIER  shift, and go to state 76
    STRING      shift, and go to state 2
    FUNC        shift, and go to state 72
    UNDEF       shift, and go to state 16
    _TRUE       shift, and go to state 17
    _FALSE      shift, and go to state 18
    _THIS       shift, and go to state 19
    ARGUMENTS   shift, and go to state 20
    FNUMBER     shift, and go to state 21
    REGEXP      shift, and go to state 22
    TYPENULL    shift, and go to state 23
    '['         shift, and go to state 34
    '('         shift, and go to state 77
    '{'         shift, and go to state 74

    func_expr  go to state 78
    strlit     go to state 56
    lvalue     go to state 79
    value      go to state 80
    object     go to state 62
    array      go to state 63


State 12

   61 delete_statement: DELETE • lvalue ';'

    IDENTIFIER  shift, and go to state 76
    _THIS       shift, and go to state 19
    ARGUMENTS   shift, and go to state 20

    lvalue  go to state 81


State 13

   54 try_statement: TRY • func_statement_block CATCH '(' IDENTIFIER ')' func_statement_block
   55              | TRY • func_statement_block FINALLY func_statement_block
   56              | TRY • func_statement_block CATCH '(' IDENTIFIER ')' func_statement_block FINALLY func_statement_block

    '{'  shift, and go to state 82

    func_statement_block  go to state 83


State 14

   25 commonstatement: THROW • expr ';'

    IDENTIFIER  shift, and go to state 71
    STRING      shift, and go to state 2
    FUNC        shift, and go to state 72
    NEW         shift, and go to state 11
    UNDEF       shift, and go to state 16
    _TRUE       shift, and go to state 17
    _FALSE      shift, and go to state 18
    _THIS       shift, and go to state 19
    ARGUMENTS   shift, and go to state 20
    FNUMBER     shift, and go to state 21
    REGEXP      shift, and go to state 22
    TYPENULL    shift, and go to state 23
    __DEBUG     shift, and go to state 25
    '+'         shift, and go to state 26
    '-'         shift, and go to state 27
    '!'         shift, and go to state 28
    INC         shift, and go to state 29
    DEC         shift, and go to state 30
    '~'         shift, and go to state 31
    TYPEOF      shift, and go to state 32
    VOID        shift, and go to state 33
    '['         shift, and go to state 34
    '('         shift, and go to state 35
    '{'         shift, and go to state 74

    func_expr    go to state 55
    strlit       go to state 56
    arrowargs    go to state 57
    expr         go to state 84
    fcall_exprs  go to state 59
    lvalue       go to state 60
    value        go to state 61
    object       go to state 62
    array        go to state 63


State 15

   45 with_statement: WITH • '(' expr ')' statement_or_empty

    '('  shift, and go to state 85


State 16

  211 value: UNDEF •

    $default  reduce using rule 211 (value)


State 17

  212 value: _TRUE •

    $default  reduce using rule 212 (value)


State 18

  213 value: _FALSE •

    $default  reduce using rule 213 (value)


State 19

  199 lvalue: _THIS •

    $default  reduce using rule 199 (lvalue)


State 20

  198 lvalue: ARGUMENTS •

    $default  reduce using rule 198 (lvalue)


State 21

  214 value: FNUMBER •

    $default  reduce using rule 214 (value)


State 22

  215 value: REGEXP •

    $default  reduce using rule 215 (value)


State 23

  210 value: TYPENULL •

    $default  reduce using rule 210 (value)


State 24

   31 commonstatement: EXPORT • DEFAULT objexport

    DEFAULT  shift, and go to state 86


State 25

  191 expr: __DEBUG •

    $default  reduce using rule 191 (expr)


State 26

  133 expr: '+' • expr

    IDENTIFIER  shift, and go to state 71
    STRING      shift, and go to state 2
    FUNC        shift, and go to state 72
    NEW         shift, and go to state 11
    UNDEF       shift, and go to state 16
    _TRUE       shift, and go to state 17
    _FALSE      shift, and go to state 18
    _THIS       shift, and go to state 19
    ARGUMENTS   shift, and go to state 20
    FNUMBER     shift, and go to state 21
    REGEXP      shift, and go to state 22
    TYPENULL    shift, and go to state 23
    __DEBUG     shift, and go to state 25
    '+'         shift, and go to state 26
    '-'         shift, and go to state 27
    '!'         shift, and go to state 28
    INC         shift, and go to state 29
    DEC         shift, and go to state 30
    '~'         shift, and go to state 31
    TYPEOF      shift, and go to state 32
    VOID        shift, and go to state 33
    '['         shift, and go to state 34
    '('         shift, and go to state 35
    '{'         shift, and go to state 74

    func_expr    go to state 55
    strlit       go to state 56
    arrowargs    go to state 57
    expr         go to state 87
    fcall_exprs  go to state 59
    lvalue       go to state 60
    value        go to state 61
    object       go to state 62
    array        go to state 63


State 27

  132 expr: '-' • expr

    IDENTIFIER  shift, and go to state 71
    STRING      shift, and go to state 2
    FUNC        shift, and go to state 72
    NEW         shift, and go to state 11
    UNDEF       shift, and go to state 16
    _TRUE       shift, and go to state 17
    _FALSE      shift, and go to state 18
    _THIS       shift, and go to state 19
    ARGUMENTS   shift, and go to state 20
    FNUMBER     shift, and go to state 21
    REGEXP      shift, and go to state 22
    TYPENULL    shift, and go to state 23
    __DEBUG     shift, and go to state 25
    '+'         shift, and go to state 26
    '-'         shift, and go to state 27
    '!'         shift, and go to state 28
    INC         shift, and go to state 29
    DEC         shift, and go to state 30
    '~'         shift, and go to state 31
    TYPEOF      shift, and go to state 32
    VOID        shift, and go to state 33
    '['         shift, and go to state 34
    '('         shift, and go to state 35
    '{'         shift, and go to state 74

    func_expr    go to state 55
    strlit       go to state 56
    arrowargs    go to state 57
    expr         go to state 88
    fcall_exprs  go to state 59
    lvalue       go to state 60
    value        go to state 61
    object       go to state 62
    array        go to state 63


State 28

  135 expr: '!' • expr

    IDENTIFIER  shift, and go to state 71
    STRING      shift, and go to state 2
    FUNC        shift, and go to state 72
    NEW         shift, and go to state 11
    UNDEF       shift, and go to state 16
    _TRUE       shift, and go to state 17
    _FALSE      shift, and go to state 18
    _THIS       shift, and go to state 19
    ARGUMENTS   shift, and go to state 20
    FNUMBER     shift, and go to state 21
    REGEXP      shift, and go to state 22
    TYPENULL    shift, and go to state 23
    __DEBUG     shift, and go to state 25
    '+'         shift, and go to state 26
    '-'         shift, and go to state 27
    '!'         shift, and go to state 28
    INC         shift, and go to state 29
    DEC         shift, and go to state 30
    '~'         shift, and go to state 31
    TYPEOF      shift, and go to state 32
    VOID        shift, and go to state 33
    '['         shift, and go to state 34
    '('         shift, and go to state 35
    '{'         shift, and go to state 74

    func_expr    go to state 55
    strlit       go to state 56
    arrowargs    go to state 57
    expr         go to state 89
    fcall_exprs  go to state 59
    lvalue       go to state 60
    value        go to state 61
    object       go to state 62
    array        go to state 63


State 29

  145 expr: INC • lvalue

    IDENTIFIER  shift, and go to state 76
    _THIS       shift, and go to state 19
    ARGUMENTS   shift, and go to state 20

    lvalue  go to state 90


State 30

  147 expr: DEC • lvalue

    IDENTIFIER  shift, and go to state 76
    _THIS       shift, and go to state 19
    ARGUMENTS   shift, and go to state 20

    lvalue  go to state 91


State 31

  134 expr: '~' • expr

    IDENTIFIER  shift, and go to state 71
    STRING      shift, and go to state 2
    FUNC        shift, and go to state 72
    NEW         shift, and go to state 11
    UNDEF       shift, and go to state 16
    _TRUE       shift, and go to state 17
    _FALSE      shift, and go to state 18
    _THIS       shift, and go to state 19
    ARGUMENTS   shift, and go to state 20
    FNUMBER     shift, and go to state 21
    REGEXP      shift, and go to state 22
    TYPENULL    shift, and go to state 23
    __DEBUG     shift, and go to state 25
    '+'         shift, and go to state 26
    '-'         shift, and go to state 27
    '!'         shift, and go to state 28
    INC         shift, and go to state 29
    DEC         shift, and go to state 30
    '~'         shift, and go to state 31
    TYPEOF      shift, and go to state 32
    VOID        shift, and go to state 33
    '['         shift, and go to state 34
    '('         shift, and go to state 35
    '{'         shift, and go to state 74

    func_expr    go to state 55
    strlit       go to state 56
    arrowargs    go to state 57
    expr         go to state 92
    fcall_exprs  go to state 59
    lvalue       go to state 60
    value        go to state 61
    object       go to state 62
    array        go to state 63


State 32

  146 expr: TYPEOF • expr

    IDENTIFIER  shift, and go to state 71
    STRING      shift, and go to state 2
    FUNC        shift, and go to state 72
    NEW         shift, and go to state 11
    UNDEF       shift, and go to state 16
    _TRUE       shift, and go to state 17
    _FALSE      shift, and go to state 18
    _THIS       shift, and go to state 19
    ARGUMENTS   shift, and go to state 20
    FNUMBER     shift, and go to state 21
    REGEXP      shift, and go to state 22
    TYPENULL    shift, and go to state 23
    __DEBUG     shift, and go to state 25
    '+'         shift, and go to state 26
    '-'         shift, and go to state 27
    '!'         shift, and go to state 28
    INC         shift, and go to state 29
    DEC         shift, and go to state 30
    '~'         shift, and go to state 31
    TYPEOF      shift, and go to state 32
    VOID        shift, and go to state 33
    '['         shift, and go to state 34
    '('         shift, and go to state 35
    '{'         shift, and go to state 74

    func_expr    go to state 55
    strlit       go to state 56
    arrowargs    go to state 57
    expr         go to state 93
    fcall_exprs  go to state 59
    lvalue       go to state 60
    value        go to state 61
    object       go to state 62
    array        go to state 63


State 33

  136 expr: VOID • expr
